# ChangeLog for dev-perl/HTML-Mason
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/HTML-Mason/ChangeLog,v 1.32 2005/05/25 13:42:03 mcummings Exp $

  25 May 2005; Michael Cummings <mcummings@gentoo.org> HTML-Mason-1.26.ebuild:
  dev-perl/File-Spec => perl-core/File-Spec migration

  25 May 2005; Michael Cummings <mcummings@gentoo.org> HTML-Mason-1.25.ebuild:
  dev-perl/File-Spec => perl-core/File-Spec migration

  25 May 2005; Michael Cummings <mcummings@gentoo.org> HTML-Mason-1.22.ebuild:
  dev-perl/File-Spec => perl-core/File-Spec migration

  25 May 2005; Michael Cummings <mcummings@gentoo.org> HTML-Mason-1.20.ebuild:
  dev-perl/File-Spec => perl-core/File-Spec migration

  24 May 2005; Michael Cummings <mcummings@gentoo.org> HTML-Mason-1.20.ebuild,
  HTML-Mason-1.22.ebuild, HTML-Mason-1.25.ebuild, HTML-Mason-1.26.ebuild,
  HTML-Mason-1.28.ebuild:
  dev-perl/CGI => perl-core/CGI

  18 May 2005; Michael Cummings <mcummings@gentoo.org> HTML-Mason-1.28.ebuild:
  Bug 93076 - mason can use *either* dev-perl/CGI ~or~ one of the apache request
  modules

*HTML-Mason-1.28 (13 May 2005)

  13 May 2005; Michael Cummings <mcummings@gentoo.org>
  +HTML-Mason-1.28.ebuild:
  Bug 81253, thanks to Matthew Philips <mattphilips@hotmail.com> for some
  updates to the ebuild

  10 May 2005; Elfyn McBratney <beu@gentoo.org> HTML-Mason-1.20.ebuild,
  HTML-Mason-1.22.ebuild, HTML-Mason-1.25.ebuild, HTML-Mason-1.26.ebuild:
  dev-perl/libapreq{,2} -> www-apache

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  16 Oct 2004; Robert Coie <rac@gentoo.org> HTML-Mason-1.26.ebuild:
  keyword amd64

*HTML-Mason-1.26 (28 Sep 2004)

  28 Sep 2004; Robert Coie <rac@gentoo.org> +HTML-Mason-1.26.ebuild:
  New upstream

  26 May 2004; Bryan Østergaard <kloeri@gentoo.org> HTML-Mason-1.25.ebuild:
  Stable on alpha.
