@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Inline
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Inline/ChangeLog,v 1.23 2005/05/24 15:45:43 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Inline/ChangeLog,v 1.24 2005/05/25 13:42:39 mcummings Exp $
+
+  25 May 2005; Michael Cummings <mcummings@gentoo.org> Inline-0.44-r1.ebuild:
+  dev-perl/File-Spec => perl-core/File-Spec migration
 
   24 May 2005; Michael Cummings <mcummings@gentoo.org> Inline-0.44-r1.ebuild:
   dev-perl/Digest-MD5 => perl-core/Digest-MD5
