@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/PDL
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/PDL/ChangeLog,v 1.38 2005/04/29 01:46:31 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/PDL/ChangeLog,v 1.39 2005/05/25 13:43:00 mcummings Exp $
+
+  25 May 2005; Michael Cummings <mcummings@gentoo.org> PDL-2.4.0-r2.ebuild:
+  dev-perl/File-Spec => perl-core/File-Spec migration
 
   29 Apr 2005; Michael Cummings <mcummings@gentoo.org> -PDL-2.3.2-r1.ebuild,
   -PDL-2.3.2-r2.ebuild, -PDL-2.3.4.ebuild, -PDL-2.4.0.ebuild,
