@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/HTML-Mason
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/HTML-Mason/ChangeLog,v 1.32 2005/05/25 13:42:03 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/HTML-Mason/ChangeLog,v 1.33 2005/05/25 13:42:21 mcummings Exp $
+
+  25 May 2005; Michael Cummings <mcummings@gentoo.org> HTML-Mason-1.28.ebuild:
+  dev-perl/File-Spec => perl-core/File-Spec migration
 
   25 May 2005; Michael Cummings <mcummings@gentoo.org> HTML-Mason-1.26.ebuild:
   dev-perl/File-Spec => perl-core/File-Spec migration
